<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_messages"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/action_messages"/>
    <item
        android:id="@+id/action_map"
        android:orderInCategory="40"
        android:showAsAction="ifRoom"
        android:title="@string/action_map"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_profile"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>